# HyprBlocker

./: .gitignore  CLAUDE.md  README.md  STATUS.md  WATCHDOG.md  debug.txt  features.md  install.sh  pyproject.toml  reinstall.sh
config/: website-blocker.service
daemon/: __init__.py  api.py  blocker.py  config.py  database.py  heartbeat_tracker.py  hyprland_monitor.py  lock_manager.py  main.py  migrations.py  pyproject.toml  scheduler.py  service_enforcer.py  time_verifier.py  utils.py  watchdog.py  watchdog_runner.py
daemon/api/: __init__.py  app.py  deps.py  schemas.py
daemon/api/routes/: blocks.py  heartbeat.py  settings.py  status.py
desktop-app/: .gitignore  api_client.py  desktop-app.spec  main.py  pyproject.toml
desktop-app/frontend/: MIGRATION.md  README.md  index.html  vite.config.ts
desktop-app/frontend/src/: App.tsx  index.css
desktop-app/frontend/src/context/: AppContext.tsx  StatusContext.tsx  ToastContext.tsx
desktop-app/frontend/src/lib/: api.ts
desktop-app/frontend/src/pages/: Blocks.tsx  Browsers.tsx  (+3 more)
desktop-app/web/: app.js  index.html  styles.css
desktop-app/web/assets/: index-9YkYAdbx.css  index-Ban_FmuF.js  index-CYFwfaM3.js  index-C_OUY4Kk.css
documentation/: MULTI_PROFILE_DETECTION.md  PROJECT_SPEC.md  PROJECT_STATUS.md  TECHNICAL_CONCEPTS.md
extension/: background.js  blocked.html  blocked.js  manifest.json
extension/native-host/: com.websiteblocker.host.chrome.json  com.websiteblocker.host.firefox.json  host.py
extension/popup/: popup.css  popup.html  popup.js
tray/: main.py  pyproject.toml  tray-app.spec
(+14 files in other folders)
