[project]
name = "website-blocker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.0",
    "apscheduler>=3.11.2",
    "fastapi>=0.127.0",
    "ntplib>=0.4.0",
    "pillow>=12.1.0",
    "pygobject>=3.50.0",
    "pyinstaller>=6.17.0",
    "pystray>=0.19.5",
    "pywebview[gtk]>=6.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]
