[project]
name = "website-blocker-daemon"
version = "0.1.0"
description = "Background daemon for website and application blocking"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.0",
    "apscheduler>=3.11.2",
    "fastapi>=0.127.0",
    "ntplib>=0.4.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]
